methods.picture.PictureMono1.scala.error
Compilation error:
PictureMono1:13: error: not found: value marqueSol
  marqueSol()
  ^PictureMono1:18: error: not found: value marquerSol
  marquerSol()
  ^PictureMono1:22: error: not found: value marquerSol
  marquerSol()
  ^